Fixed footer menu and some layout issues

--- a/stylesheets/module/_cardCollection.scss
+++ b/stylesheets/module/_cardCollection.scss
@@ -12,15 +12,6 @@
     flex-flow: row wrap;
     flex: 0 0 100%;
     justify-content: space-between;
-
-    .pager-statistics {
-
-    }
-
-    .pager {
-
-    }
-
   }
 
   .card {
@@ -38,7 +29,6 @@
     .header {
       padding: 7em 0 0 0;
       background-color: $brown;
-      border-bottom: 3px solid $accent;
       color: $white;
       border-top-left-radius: 3px;
       border-top-right-radius: 3px;
@@ -48,12 +38,37 @@
 
       .title{
         background-color: rgba($black, .7);
+        border-bottom: 3px solid $accent;
       }
+    }
+
+    .title, .title-with-actions {
+      border-bottom: 1px solid $grey-bright;
     }
 
     .title {
       padding: 0 .8em;
       margin-bottom: 0;
+    }
+
+    .title-with-actions {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      align-items: center;
+      flex: 1 0 auto;
+
+      .title {
+        border-bottom: none;
+      }
+
+      .actions {
+        padding: 0 .8em;
+
+        .mdl-button{
+          border-radius: 50%;
+        }
+      }
     }
 
     .content {
@@ -76,25 +91,12 @@
           margin-right: 8px;
           font-size: inherit;
         }
-
-        span {
-          //display: inline-block;
-        }
       }
 
       .material-icons {
         vertical-align: sub;
       }
 
-    }
-
-    .actions {
-      text-align: right;
-      height: 36px;
-
-      .mdl-button {
-        border-radius: 0;
-      }
     }
 
     .footer {
@@ -113,8 +115,6 @@
         max-width: 30px;
         max-height: 30px;
       }
-
     }
-
   }
 }
