--- a/stylesheets/module/_dialogContainer.scss
+++ b/stylesheets/module/_dialogContainer.scss
@@ -17,6 +17,7 @@
     img {
       vertical-align: middle;
       margin-right: .5em;
+      max-height: 48px;
     }
   }
   .dialog-container-footer{
